test/invalid/aug_assign_undefined.py
# Augmented assignment on undefined variable
def main() -> None:
    x += 1
    print(x)
